Fix teams not wrapping on Safari (and result being hidden)

--- a/app/javascript/packs/components/styles/_match.scss
+++ b/app/javascript/packs/components/styles/_match.scss
@@ -33,6 +33,8 @@
     font-size: 16px;
     font-weight: 600;
     margin-top: 4px;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .match__teams-separator, .match__goals-separator {
